<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_5" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Fizzbuzz" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AZz-sp-qp8">
                                <rect key="frame" x="295" y="688" width="99" height="40"/>
                                <color key="backgroundColor" red="0.30588235294117649" green="0.85098039215686272" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <state key="normal" title="Play Again"/>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3/5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFU-go-eZX">
                                <rect key="frame" x="352" y="20" width="42" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="dqu-OG-cBX"/>
                                    <constraint firstAttribute="width" constant="42" id="sCu-f2-gxO"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pYF-u8-4Mi" userLabel="GameView">
                                <rect key="frame" x="60" y="221" width="294" height="294"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GeA-Op-H4e">
                                        <rect key="frame" x="0.0" y="0.0" width="140.66666666666666" height="141.66666666666669"/>
                                        <color key="backgroundColor" red="0.30588235289999999" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="numberButton"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
                                        <state key="normal" title="0" backgroundImage="button_border">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qHh-a1-rjx"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u94-66-4hD">
                                        <rect key="frame" x="153.66666666666663" y="152.66666666666669" width="140.33333333333337" height="141.33333333333331"/>
                                        <color key="backgroundColor" red="0.30588235289999999" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FizzbuzzButton"/>
                                        <state key="normal" image="space" backgroundImage="button_border"/>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Flo-TI-Npq"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="47l-5n-wVs">
                                        <rect key="frame" x="153.66666666666663" y="0.0" width="140.33333333333337" height="141.66666666666669"/>
                                        <color key="backgroundColor" red="0.30588235289999999" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FizzButton"/>
                                        <state key="normal" image="champagne" backgroundImage="button_border"/>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MUv-o8-G8S"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PdI-na-WxU">
                                        <rect key="frame" x="0.0" y="152.66666666666669" width="140.66666666666666" height="141.33333333333331"/>
                                        <color key="backgroundColor" red="0.30588235289999999" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BuzzButton"/>
                                        <state key="normal" image="lightning" backgroundImage="button_border"/>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bjJ-M1-Far"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.30588235289999999" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstItem="GeA-Op-H4e" firstAttribute="leading" secondItem="pYF-u8-4Mi" secondAttribute="leading" id="16g-qz-MMa"/>
                                    <constraint firstItem="PdI-na-WxU" firstAttribute="leading" secondItem="pYF-u8-4Mi" secondAttribute="leading" id="1pY-sg-g28"/>
                                    <constraint firstAttribute="bottom" secondItem="PdI-na-WxU" secondAttribute="bottom" id="2mg-FX-OKS"/>
                                    <constraint firstAttribute="width" secondItem="pYF-u8-4Mi" secondAttribute="height" multiplier="1:1" id="3Wf-sN-rkg"/>
                                    <constraint firstItem="u94-66-4hD" firstAttribute="height" secondItem="pYF-u8-4Mi" secondAttribute="height" multiplier="0.48" id="86U-PV-u9l"/>
                                    <constraint firstItem="GeA-Op-H4e" firstAttribute="height" secondItem="pYF-u8-4Mi" secondAttribute="height" multiplier="0.48" id="9qN-1C-srK"/>
                                    <constraint firstItem="GeA-Op-H4e" firstAttribute="top" secondItem="pYF-u8-4Mi" secondAttribute="top" id="AaN-N2-XSX"/>
                                    <constraint firstAttribute="trailing" secondItem="u94-66-4hD" secondAttribute="trailing" id="CUu-gw-uDA"/>
                                    <constraint firstItem="47l-5n-wVs" firstAttribute="top" secondItem="pYF-u8-4Mi" secondAttribute="top" id="FhB-ps-Uwu"/>
                                    <constraint firstItem="47l-5n-wVs" firstAttribute="top" secondItem="pYF-u8-4Mi" secondAttribute="top" id="Jq7-BA-Jss"/>
                                    <constraint firstAttribute="trailing" secondItem="u94-66-4hD" secondAttribute="trailing" id="JwO-jZ-DH6"/>
                                    <constraint firstItem="47l-5n-wVs" firstAttribute="width" secondItem="pYF-u8-4Mi" secondAttribute="width" multiplier="0.48" id="KzO-xe-IXj"/>
                                    <constraint firstItem="47l-5n-wVs" firstAttribute="height" secondItem="pYF-u8-4Mi" secondAttribute="height" multiplier="0.48" id="O7F-0W-PyY"/>
                                    <constraint firstItem="PdI-na-WxU" firstAttribute="width" secondItem="pYF-u8-4Mi" secondAttribute="width" multiplier="0.48" id="QQM-7d-2qm"/>
                                    <constraint firstAttribute="trailing" secondItem="47l-5n-wVs" secondAttribute="trailing" id="RPI-YA-M2a"/>
                                    <constraint firstAttribute="bottom" secondItem="u94-66-4hD" secondAttribute="bottom" id="buO-z6-9ro"/>
                                    <constraint firstAttribute="bottom" secondItem="u94-66-4hD" secondAttribute="bottom" id="iQs-MI-nGv"/>
                                    <constraint firstAttribute="bottom" secondItem="PdI-na-WxU" secondAttribute="bottom" id="iqH-9X-2c4"/>
                                    <constraint firstItem="GeA-Op-H4e" firstAttribute="width" secondItem="pYF-u8-4Mi" secondAttribute="width" multiplier="0.48" id="jsH-HL-vjF"/>
                                    <constraint firstItem="47l-5n-wVs" firstAttribute="top" secondItem="pYF-u8-4Mi" secondAttribute="top" id="kyw-pq-Yb9"/>
                                    <constraint firstItem="u94-66-4hD" firstAttribute="width" secondItem="pYF-u8-4Mi" secondAttribute="width" multiplier="0.48" id="lOK-sZ-onp"/>
                                    <constraint firstItem="PdI-na-WxU" firstAttribute="height" secondItem="pYF-u8-4Mi" secondAttribute="height" multiplier="0.48" id="o6m-dH-hMr"/>
                                    <constraint firstItem="PdI-na-WxU" firstAttribute="leading" secondItem="pYF-u8-4Mi" secondAttribute="leading" id="owk-6a-EvY"/>
                                    <constraint firstAttribute="trailing" secondItem="47l-5n-wVs" secondAttribute="trailing" id="qkT-8S-Pmf"/>
                                    <constraint firstAttribute="trailing" secondItem="47l-5n-wVs" secondAttribute="trailing" id="vBM-Dy-ymb"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="0.30588235294117649" green="0.85098039215686272" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="pYF-u8-4Mi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2ZQ-Qv-D8p"/>
                            <constraint firstItem="pYF-u8-4Mi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2tM-DI-Llh"/>
                            <constraint firstItem="pYF-u8-4Mi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="3Qw-Pu-B58"/>
                            <constraint firstItem="dFU-go-eZX" firstAttribute="trailing" secondItem="AZz-sp-qp8" secondAttribute="trailing" id="Irw-qu-wM5"/>
                            <constraint firstAttribute="trailingMargin" secondItem="AZz-sp-qp8" secondAttribute="trailing" id="PcZ-EW-c7s"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="AZz-sp-qp8" secondAttribute="bottom" constant="8" id="Prj-Ys-6Ek"/>
                            <constraint firstItem="dFU-go-eZX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ldt-Jk-EYZ"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="buzzButton" destination="PdI-na-WxU" id="fyG-Rx-13P"/>
                        <outlet property="fizzButton" destination="47l-5n-wVs" id="NBg-Dm-BB2"/>
                        <outlet property="fizzbuzzButton" destination="u94-66-4hD" id="FDp-oO-dyq"/>
                        <outlet property="numberButton" destination="GeA-Op-H4e" id="Wj3-DO-P7I"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
        </scene>
    </scenes>
    <resources>
        <image name="button_border" width="400" height="400"/>
        <image name="champagne" width="65" height="66"/>
        <image name="lightning" width="38" height="66"/>
        <image name="space" width="62" height="66"/>
    </resources>
</document>
